--- a/gameloop.html
+++ b/gameloop.html
@@ -61,7 +61,7 @@
     <a href='homepage.html'><button id = "back">back</button></a>
 
     <div class="overlay-content" id="form">
-        <a href='homepage.html'><button id = "home">home</button></a>
+        <a href='index.html'><button id = "home">home</button></a>
         <button id = "retry">retry</button>
     </div>
 
