--- a/gameloop.html
+++ b/gameloop.html
@@ -58,7 +58,7 @@
 
 
 
-    <a href='homepage.html'><button id = "back">back</button></a>
+    <a href='index.html'><button id = "back">back</button></a>
 
     <div class="overlay-content" id="form">
         <a href='index.html'><button id = "home">home</button></a>
