--- a/gameloop.html
+++ b/gameloop.html
@@ -9,6 +9,7 @@
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
 
+    <link rel="manifest" href="/manifest.json">
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
@@ -21,7 +22,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-
 </head>
 
 <body  onLoad="display()" >
