--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
-
+    <link rel="manifest" href="/manifest.json">
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="basicBlue.css">
     <link rel="stylesheet" href="./styleForm.css">
