--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
+    <meta name="theme_color" content="#ffffff">
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="icons-192.png">
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="basicBlue.css">
     <link rel="stylesheet" href="./styleForm.css">
