--- a/gameloop.html
+++ b/gameloop.html
@@ -8,8 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
+    <meta name="theme_color" content="#ffffff">
 
     <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="icons-192.png">
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
