--- a/gameloop.html
+++ b/gameloop.html
@@ -16,6 +16,7 @@
     <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styleForm.css">
+    <link rel="stylesheet" href="./size.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,20 +42,27 @@
         <div id="enemyPoints">
               </div></div>
 </div>
-    <canvas tabindex="1" id="the_canvas" width="800" height="400">
+    <canvas tabindex="1" id="the_canvas" width="480" height="400">
         Oops! looks like your browser does not support canvas tag
     </canvas>
 
-    <canvas tabindex="1" id="the_canvas_results" width="800" height="400">
+    <canvas tabindex="1" id="the_canvas_results" width="480" height="400">
         Oops! looks like your browser does not support canvas tag
     </canvas>
 
-     <canvas tabindex="1" id="the_canvas_stars" width="800" height="400">
+     <canvas tabindex="1" id="the_canvas_stars" width="480" height="400">
         Oops! looks like your browser does not support canvas tag
     </canvas>
 
-    
- <canvas tabindex="1" id="blank" width="20" height="20">
+    <canvas tabindex="1" id="the_canvas_rival" width="300" height="400">
+        Oops! looks like your browser does not support canvas tag
+    </canvas>
+
+    <canvas tabindex="1" id="the_canvas_results_rival" width="300" height="400">
+        Oops! looks like your browser does not support canvas tag
+    </canvas> 
+
+    <canvas tabindex="1" id="the_canvas_stars_rival" width="300" height="400">
         Oops! looks like your browser does not support canvas tag
     </canvas>
 
