--- a/gameloop.html
+++ b/gameloop.html
@@ -70,7 +70,8 @@
 
     <a href='index.html'><button id = "back">back</button></a>
 
-    <div class="overlay-content" id="form">
+    <div class="overlay-win_state" id="form">
+        <h2 id="win_message">You Lose</h2>
         <a href='index.html'><button id = "home">home</button></a>
         <button id = "retry">retry</button>
     </div>
