--- a/gameloop.html
+++ b/gameloop.html
@@ -72,8 +72,10 @@
 
     <div class="overlay-win_state" id="form">
         <h2 id="win_message">You Lose</h2>
+        <div id = "home_retry_buttons">
         <a href='index.html'><button id = "home">home</button></a>
         <button id = "retry">retry</button>
+    </div>
     </div>
 
 </body>
