--- a/gameloop.html
+++ b/gameloop.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset="utf-8">
     <title>Rock, Paper, Scisscors! </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=980" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" id="viewport-meta">
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
     <meta name="theme_color" content="#ffffff">
