--- a/gameloop.html
+++ b/gameloop.html
@@ -28,7 +28,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 
+
 <body  onLoad="display()" >
+
+    <div class = "container">
     <h2 id="round">Round 1</h2><br>
 
     <div id="scores">
@@ -70,14 +73,16 @@
 
 
     <a href='index.html'><button id = "back">back</button></a>
+    <button input type="button" id="nextRound" onclick="nextRound()">Next Round!</button>
 
     <div class="overlay-win_state" id="form">
         <h2 id="win_message">You Lose</h2>
         <div id = "home_retry_buttons">
         <a href='index.html'><button id = "home">home</button></a>
-        <button id = "retry">retry</button>
+        <button id = "retry" onClick="document.location.reload(true)">retry</button>
     </div>
     </div>
+</div>
 
 </body>
 
