--- a/gameloop.html
+++ b/gameloop.html
@@ -76,7 +76,7 @@
     <button input type="button" id="nextRound" onclick="nextRound()">Next Round!</button>
 
     <div class="overlay-win_state" id="form">
-        <h2 id="win_message">You Lose</h2>
+        <h2 id="winMessage">You Lose</h2>
         <div id = "home_retry_buttons">
         <a href='index.html'><button id = "home">home</button></a>
         <button id = "retry" onClick="document.location.reload(true)">retry</button>
