--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="basicBlue.css">
     <link rel="stylesheet" href="./styleForm.css">
+    <link rel="stylesheet" href="./size.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
@@ -83,5 +84,6 @@
 
 <!--JavaScript File-->
 <script src="./script.js"></script>
-
+<script src="./localStorage.js"></script>
+<script src="./gameplay.js"></script>
 </html>
