--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="icons-192.png">
     <!--StyleSheet-->
-    <link id="switchStyle" rel="stylesheet" type="text/css" href="basicBlue.css">
+    <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
     <link rel="stylesheet" href="./styleForm.css">
     <link rel="stylesheet" href="./size.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
@@ -43,9 +43,7 @@
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                 <br><br>
                 <label for="name">Style</label><br>
-                <input type="radio" id="blueOpt" name="changeStyle" value="blueOpt" checked="checked">
-                <label id="styleOpt" for="blueOpt">Basic Blue</label><br>
-                <input type="radio" id="purpleOpt" name="changeStyle" value="purpleOpt">
+                <input type="radio" id="purpleOpt" name="changeStyle" value="purpleOpt" checked="checked">
                 <label id="styleOpt" for="purpleOpt">Perfect Purple</label><br>
                 <input type="radio" id="pinkOpt" name="changeStyle" value="pinkOpt">
                 <label id="styleOpt" for="pinkOpt">Plush Pink</label><br><br>
