--- a/gameloop.html
+++ b/gameloop.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no " id="viewport-meta">
     <meta name="description" content="HTML5 GameLoop Template">
     <meta name="author" content="UI Programming">
-    <meta name="theme_color" content="#ffffff">
+    <meta name="theme_color" content="#317EFB">
 
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="icons-192.png">
