--- a/gameloop.html
+++ b/gameloop.html
@@ -35,11 +35,11 @@
     <h2 id="round">Round 1</h2><br>
 
     <div id="scores">
-    <div id="playerScore"><h3 id="playerName">You</h3>
+   <h3 id="playerName">You</h3>
 
         <div id="playerPoints">
       </div>
-</div>
+
 
 
     <div id="enemyScore"><h3 id="enemyName">Enemy</h3>
