--- a/gameloop.html
+++ b/gameloop.html
@@ -31,21 +31,17 @@
 
 <body  onLoad="display()" >
 
-    <div class = "container">
     <h2 id="round">Round 1</h2><br>
 
-    <div id="scores">
    <h3 id="playerName">You</h3>
 
-        <div id="playerPoints">
-      </div>
 
 
 
-    <div id="enemyScore"><h3 id="enemyName">Enemy</h3>
-        <div id="enemyPoints">
-              </div></div>
-</div>
+  <h3 id="enemyName">Enemy</h3>
+        
+             
+
     <canvas tabindex="1" id="the_canvas" width="480" height="400">
         Oops! looks like your browser does not support canvas tag
     </canvas>
