--- a/gameloop.html
+++ b/gameloop.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="icons-192.png">
     <!--StyleSheet-->
-    <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
+    <link id="switchStyle" rel="stylesheet" type="text/css" href="perfectPurple.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styleForm.css">
     <link rel="stylesheet" href="./size.css">
