--- a/gameloop.html
+++ b/gameloop.html
@@ -14,10 +14,9 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="icons-192.png">
     <!--StyleSheet-->
-    <link id="switchStyle" rel="stylesheet" type="text/css" href="perfectPurple.css">
+    <link id="switchStyle" rel="stylesheet" type="text/css" href="plushyPink.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./styleForm.css">
-    <link rel="stylesheet" href="./size.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,6 +30,7 @@
 
 <body  onLoad="display()" >
 
+    <div class="filter"> 
     <h2 id="round">Round 1</h2><br>
 
    <h3 id="playerName">You</h3>
@@ -83,11 +83,11 @@
     </div>
     </div>
 </div>
+</div>
 
 </body>
 
     <!--JavaScript File-->
     <script src="./script.js"></script>
     <script src="./gameplay.js"></script>
-    <script src="./localStorage.js"></script>
 </html>
