--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!--StyleSheet-->
     <link id="switchStyle" rel="stylesheet" type="text/css" href="perfectPurple.css">
     <link rel="stylesheet" href="./styleForm.css">
-    <link rel="stylesheet" href="./size.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
@@ -28,6 +27,10 @@
 </head>
 
 <body>
+
+    <audio autoplay loop>
+        <source src="AllTimeHighJump.mp3" type="audio/mpeg"></source>
+      </audio>
 
     
         <div id="form" class="overlay">
@@ -82,6 +85,4 @@
 
 <!--JavaScript File-->
 <script src="./script.js"></script>
-<script src="./localStorage.js"></script>
-<script src="./gameplay.js"></script>
 </html>
