--- a/gameloop2.html
+++ b/gameloop2.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Player 2 </title>  
+    <title>Player 1 </title>
     <meta name="viewport" content="width=980" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" id="viewport-meta">
     <meta name="description" content="HTML5 GameLoop Template">
@@ -28,7 +28,7 @@
 </head>
 
 
-<body  onload="reset();"> 
+<body>
 
     <h2 id="round">Round 1</h2><br>
 
@@ -89,5 +89,5 @@
 
     <!--JavaScript File-->
     <script src="./script.js"></script>
-    <script src="./gameMultiplayer.js"></script>
+    <script src="./gameMultiplayer2.js"></script>
 </html>
