--- a/gameloop3.html
+++ b/gameloop3.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Player 2 </title>  
+    <title>Single Player </title>  
     <meta name="viewport" content="width=980" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" id="viewport-meta">
     <meta name="description" content="HTML5 GameLoop Template">
@@ -89,5 +89,5 @@
 
     <!--JavaScript File-->
     <script src="./script.js"></script>
-    <script src="./gameMultiplayer.js"></script>
+    <script src="./gameplay.js"></script>
 </html>
