--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div id="buttons">
 
             <a href='gameloop3.html'><button id = "play">Play!</button></a>
-            <button type="button" id="multiplay" href='gameloop.html' onclick="openInNewTab('gameloop.html', 'gameloop2.html')"; >Multiplay!</button>
+            <button type="button" id="multiplay" onclick="openInNewTab('gameloop.html', 'gameloop2.html')"; >Multiplay!</button>
             <button type="button" id="settings" onclick="openNav()">Settings!</button>
         </div>
     </div>
